<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/signin1"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText">

        <!-- Restricting the max length to 15 --><![CDATA[
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="370dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

        ]]><!-- Restricting the max length to 14 --><![CDATA[
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginUsername"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />





        ]]>

        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="430dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/edittext_border"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLength="15"
            android:padding="12dp"
            app:layout_constraintBottom_toTopOf="@+id/loginPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:autofillHints=""
            android:background="@drawable/edittext_border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="14"
            android:padding="12dp"
            android:textColorHint="#00796B"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/green"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@+id/signupRedirect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/signupRedirect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/not_yet_registered_sign_up"
            android:textColor="@color/green"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
