<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/signup1"
    tools:context=".SignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText">

        <!-- Added to move to next field on Enter key press -->
        android:inputType="text" <!-- Modified inputType to text --><![CDATA[
        app:layout_constraintBottom_toTopOf="@+id/signupPhoneNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintTextFieldSize" />

        ]]><!-- Added to move to next field on Enter key press --><![CDATA[
        app:layout_constraintBottom_toTopOf="@+id/signupPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintTextFieldSize" />

        ]]><!-- Added to indicate form submission on Enter key press --><![CDATA[
        app:layout_constraintBottom_toTopOf="@+id/signupButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintTextFieldSize" />































        ]]>

        <EditText
            android:id="@+id/signupUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:autofillHints=""
            android:background="@drawable/edittext_border"
            android:hint="@string/usernamelogin"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:importantForAutofill="no"
            android:maxLength="15"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/signupPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/phone_number"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupUsername" />

        <EditText
            android:id="@+id/signupPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/edittext_border"
            android:hint="@string/passwordlogin"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="14"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupPhoneNumber" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/green"
            android:text="@string/signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupPassword"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/loginRedirect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="91dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="92dp"
            android:gravity="center"
            android:text="@string/already_registered_login"
            android:textColor="@color/green"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
